--- a/style.css
+++ b/style.css
@@ -1,9 +1,92 @@
 html,
-body,
-#map {
+body {
   margin: 0;
   padding: 0;
-  height: 100%;
+  font-family: "DM Sans", sans-serif;
+  color: white;
+  font-weight: 40;
+}
+
+.main-layout {
+  display: flex;
+  height: 100vh;
+  width: 100vw;
+}
+
+.sidebar {
+  width: 300px;
+  background: rgb(15, 15, 15);
+  padding: 40px 30px 30px 30px;
+  display: flex;
+  flex-direction: column;
+  border-right: 1px solid #a0a0a0;
+}
+
+.map-container {
+  flex: 1;
+  position: relative;
+}
+
+#map {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
   width: 100%;
+  height: 100%;
+}
+
+.toggle-group {
+  display: flex;
+  margin-bottom: 30px;
+  border: 1px solid #ccc;
+  border-radius: 8px;
   overflow: hidden;
+  width: 180px;
+}
+
+.toggle-btn {
+  flex: 1;
+  padding: 10px 0;
+  text-align: center;
+  cursor: pointer;
+  background: rgb(15, 15, 15);
+  color: #fff;
+  transition: background 0.2s, color 0.2s;
+}
+
+.toggle-btn.active {
+  background: #eee;
+  color: #000000;
+}
+
+.layer-controls {
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+}
+
+.slider-group {
+  margin-top: 24px;
+  margin-bottom: 24px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+#layerSpacingSlider {
+  width: 180px;
+  accent-color: #88b4dc;
+}
+
+.layer-controls input[type="checkbox"] {
+  accent-color: #88b4dc;
+}
+
+h1,
+h3 {
+  font-weight: lighter;
+  margin-bottom: 24px;
+  margin-top: 0;
 }
