--- a/style.css
+++ b/style.css
@@ -16,10 +16,11 @@ body {
 .sidebar {
   width: 300px;
   background: rgb(15, 15, 15);
-  padding: 40px 30px 30px 30px;
+  padding: 60px;
   display: flex;
   flex-direction: column;
   border-right: 1px solid #a0a0a0;
+  border-left: 1px solid #a0a0a0;
 }
 
 .map-container {
@@ -48,7 +49,7 @@ body {
 
 .toggle-btn {
   flex: 1;
-  padding: 10px 0;
+  padding: 8px 0;
   text-align: center;
   cursor: pointer;
   background: rgb(15, 15, 15);
@@ -68,8 +69,8 @@ body {
 }
 
 .slider-group {
-  margin-top: 24px;
-  margin-bottom: 24px;
+  margin-top: 16px;
+  margin-bottom: 16px;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -85,8 +86,14 @@ body {
 }
 
 h1,
+h2,
 h3 {
   font-weight: lighter;
-  margin-bottom: 24px;
+  margin-bottom: 16px;
   margin-top: 0;
+}
+
+.small-brackets {
+  font-size: 0.85em;
+  opacity: 0.8;
 }
